Closed Bug 1670085 Opened 5 years ago Closed 5 years ago

NSS shutdown leak with HTTP3

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

No description provided.
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/413ef9946b21 Http3 cannot be dispatch using OnMsgReclaimConnection. r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: