Bug 1670085 - Http3 cannot be dispatch using OnMsgReclaimConnection. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D93323